Avoid instantiation of primitive wrappers