@@ -78,7 +78,7 @@ public class GetRecordsTest extends CSWSimpleTestSupport {
         assertEquals("application/xml", gr.getOutputFormat());
         assertEquals("http://www.opengis.net/cat/csw/2.0.2", gr.getOutputSchema());
         assertNotNull(gr.getDistributedSearch());
-        assertEquals(new Integer(10), gr.getDistributedSearch().getHopCount());
+        assertEquals(Integer.valueOf(10), gr.getDistributedSearch().getHopCount());
         assertEquals("http://www.geoserver.org", gr.getResponseHandler());
 
         // now onto the query
