@@ -351,12 +351,12 @@ public class XmlCharsetDetector {
 
         if ((b0 == 0xFE) && (b1 == 0xFF)) {
             // UTF-16, big-endian
-            return new EncodingInfo("UTF-16BE", new Boolean(true), true);
+            return new EncodingInfo("UTF-16BE", Boolean.valueOf(true), true);
         }
 
         if ((b0 == 0xFF) && (b1 == 0xFE)) {
             // UTF-16, little-endian
-            return new EncodingInfo("UTF-16LE", new Boolean(false), true);
+            return new EncodingInfo("UTF-16LE", Boolean.valueOf(false), true);
         }
 
         // default to UTF-8 if we don't have enough bytes to make a
@@ -383,12 +383,12 @@ public class XmlCharsetDetector {
 
         if ((b0 == 0x00) && (b1 == 0x00) && (b2 == 0x00) && (b3 == 0x3C)) {
             // UCS-4, big endian (1234)
-            return new EncodingInfo("ISO-10646-UCS-4", new Boolean(true));
+            return new EncodingInfo("ISO-10646-UCS-4", Boolean.valueOf(true));
         }
 
         if ((b0 == 0x3C) && (b1 == 0x00) && (b2 == 0x00) && (b3 == 0x00)) {
             // UCS-4, little endian (4321)
-            return new EncodingInfo("ISO-10646-UCS-4", new Boolean(false));
+            return new EncodingInfo("ISO-10646-UCS-4", Boolean.valueOf(false));
         }
 
         if ((b0 == 0x00) && (b1 == 0x00) && (b2 == 0x3C) && (b3 == 0x00)) {
@@ -408,13 +408,13 @@ public class XmlCharsetDetector {
             // UTF-16, big-endian, no BOM
             // (or could turn out to be UCS-2...
             // REVISIT: What should this be?
-            return new EncodingInfo("UTF-16BE", new Boolean(true));
+            return new EncodingInfo("UTF-16BE", Boolean.valueOf(true));
         }
 
         if ((b0 == 0x3C) && (b1 == 0x00) && (b2 == 0x3F) && (b3 == 0x00)) {
             // UTF-16, little-endian, no BOM
             // (or could turn out to be UCS-2...
-            return new EncodingInfo("UTF-16LE", new Boolean(false));
+            return new EncodingInfo("UTF-16LE", Boolean.valueOf(false));
         }
 
         if ((b0 == 0x4C) && (b1 == 0x6F) && (b2 == 0xA7) && (b3 == 0x94)) {
